# stackops

./: .gitignore  GUIDE.MD  build-package.sh  local-build.sh  mykey.asc  pyproject.toml  pytest.ini  requirements.txt  setup.py  test-sign.sh  test.txt.asc  verify-debian.sh
.github/workflows/: debian-publish.yml
.pybuild/cpython3_3.12_stackops/: .pydistutils.cfg
config/: settings.py
debian/: changelog  control  copyright  install  rules
src/stackops/: cli.py  setup_manager.py
src/stackops.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/stackops/scripts/: docker_setup.sh  initial_setup.sh  runner-setup.sh  setup.sh
tests/: conftest.py  test_setup.py
